WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23443
Table accessibility should be re-enabled after fixing crash that occurs at WebCore::AccessibilityTable::isTableExposableThroughAccessibility() when attempting to create a link in a rich text message
https://bugs.webkit.org/show_bug.cgi?id=23443
Summary
Table accessibility should be re-enabled after fixing crash that occurs at We...
chris fleizach
Reported
2009-01-20 17:51:18 PST
Re-enable table accessibility
Attachments
patch to re-enable accessibility
(16.17 KB, patch)
2009-01-20 17:54 PST
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-01-20 17:54:54 PST
Created
attachment 26880
[details]
patch to re-enable accessibility
Beth Dakin
Comment 2
2009-01-21 14:41:17 PST
Comment on
attachment 26880
[details]
patch to re-enable accessibility r=me
chris fleizach
Comment 3
2009-01-21 14:55:31 PST
http://trac.webkit.org/changeset/40098
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug