Bug 23443: Table accessibility should be re-enabled after fixing crash that occurs at WebCore::AccessibilityTable::isTableExposableThroughAccessibility() when attempting to create a link in a rich text message https://bugs.webkit.org/show_bug.cgi?id=23443

Re-enable Accessibility tables and make sure accessibility code does not interrogate the render tree
during render tree updates



Canonical link: https://commits.webkit.org/32288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40098 268f45cc-cd09-0410-ab3c-d52691b4dbfc