WebCore/page/AccessibilityObject.cpp
@@ -1028,4 +1028,8 @@ const String& AccessibilityObject::actionVerb() const
     }
 }
 
+void AccessibilityObject::updateBackingStore()
+{
+}
+    
 } // namespace WebCore
