WebCore/page/AccessibilityTable.cpp
@@ -53,13 +53,11 @@ AccessibilityTable::AccessibilityTable(RenderObject* renderer)
     : AccessibilityRenderObject(renderer),
     m_headerContainer(0)
 {
-    // FIXME: We need to disable Accessibility Tables entirely on the Mac until <rdar://problem/6372481> is resolved.
-#if PLATFORM(MAC)
+#if defined(BUILDING_ON_TIGER) || defined(BUILDING_ON_LEOPARD)
     m_isAccessibilityTable = false;
-#else    
+#else
     m_isAccessibilityTable = isTableExposableThroughAccessibility();
 #endif
-
 }
 
 AccessibilityTable::~AccessibilityTable()
